"STYLE: Fix calendar overflow and change text color in the Avalability section"

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,9 +119,9 @@ body {
     background-color: #97aa8e;    
 }
 
-.img-left, img-right, article-left, article-right {
+/* .img-left, img-right, article-left, article-right {
     width: 50%;
-}
+} */
 
 #the-band img {
     border-radius: 40px;
@@ -159,11 +159,10 @@ video {
 }
 
 #availability-note {
-    color: #4fdd08;
+    color: #e80815;
     font-family: 'Trebuchet MS', Arial, sans-serif;
     font-size: 2rem;
     margin: 0 auto;
-    width: 50%;
 }
 
 /* Contact Us */
